--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
         </section>
         
         <section class="section" id="cv">
-            <button class="btn btn-pink">Télécharger le CV</button>
             <div class="cv-content">
                 <div class="cv-content-left">
                     <div class="cv-content-top">
@@ -49,7 +48,7 @@
                         <p><i class="far fa-envelope"></i>marie.buerki@gmail.com</p>
                         <p><i class="fab fa-github"></i>www.github.com/marie-bu</p>
                         <p><i class="fas fa-phone"></i>06 03 10 58 58</p>
-                        <p><i class="fas fa-map-marker-alt"></i>1 rue des Lilas,<br>74100, Annemasse</p>
+                        <p><i class="fas fa-map-marker-alt"></i>1 rue des Lilas<br>74100, Annemasse</p>
                     </div>
                     <div class="cv-content-left-skills">
                         <h4>Compétences</h4>
@@ -128,6 +127,7 @@
                     </div>
                 </div>
             </div>
+            <a href="CV - Marie Burki.pdf" download class="btn btn-cv">Télécharger PDF</a>
         </section>
 
         <section class="section" id="career">
