--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
                 Mais, en 2019, l'arrivée de mon fils initia une réflexion sur mes envies et projets
                 professionnels à long terme.
             </p>
-            <h3 class="change career-title">Pourquoi le développement front-end ?</h3>
-            <p class="change career-text career-text-hidden">Même si j'aime mon précédent métier, j'ai toujours
+            <h3 class="change career-title career-title-active">Pourquoi le développement front-end ?</h3>
+            <p class="change career-text">Même si j'aime mon précédent métier, j'ai toujours
                 su que je ne voulais pas l'exercer toute ma vie. En réfléchissant plus sérieusement à la
                 direction que je voulais prendre, deux facteurs majeurs m'amenèrent sur ma nouvelle voie.<br>
                 Le premier était l'envie d'apprendre quelque chose de nouveau ; des années après mes études,
@@ -156,8 +156,8 @@
                 C'est ainsi que je me suis lancée dans l'apprentissage du développement front-end. Sans regret,
                 car depuis que j'ai commencé à coder, je découvre un métier que j'adore.
             </p>
-            <h3 class="after career-title career-title-active">Parcours de développeuse</h3>
-            <p class="after career-text">Fin 2020, je suis maman au foyer et j'entame le parcours diplômant de
+            <h3 class="after career-title">Parcours de développeuse</h3>
+            <p class="after career-text career-text-hidden">Fin 2020, je suis maman au foyer et j'entame le parcours diplômant de
                 développeur front-end d'OpenClassrooms pendant mon temps libre.<br>
                 Mais à un tiers du parcours, des contraintes de temps et d'argent me poussent à m'adapter et je
                 me lance dans la rechercher d'un poste en alternance pour le reste de la formation.<br>
