--- a/index.html
+++ b/index.html
@@ -16,25 +16,25 @@
         <img src="pictures/profile.png" alt="">
         <h1>Marie Burki</h1>
         <h2>Développeuse front-end</h2>
-        <button class="btn-icon btn-icon-nav"><i class="fas fa-bars"></i><i class="fas fa-times"></i></button>
+        <!--<button class="btn-icon btn-icon-nav"><i class="fas fa-bars"></i><i class="fas fa-times"></i></button>
         <nav class="nav">
             <a href="#cv" class="btn-icon btn-icon-nav-link h3">Curriculum Vitae</a>
             <a href="#career" class="btn-icon btn-icon-nav-link h3">Ma reconversion</a>
             <a href="#refer" class="btn-icon btn-icon-nav-link h3">Recommandation</a>
             <a href="#skills" class="btn-icon btn-icon-nav-link h3">Compétences</a>
             <a href="#portfolio" class="btn-icon btn-icon-nav-link h3">Portfolio</a>
-            <a href="#contact" class="btn-icon btn-icon-nav-link h3">Contact</a>
+            <a href="#contact" class="btn-icon btn-icon-nav-link h3">Contact</a>-->
         </nav>
     </header>
 
     <main>
         <section class="section section-active" id="navigation">
-            <button class="cv btn-circle" id="btn-cv">Curriculum Vitae</button>
-            <button class="career btn-circle" id="btn-career">Ma reconversion</button>
-            <button class="refer btn-circle" id="btn-refer">Recommandation</button>
-            <button class="skills btn-circle" id="btn-skills">Compétences</button>
-            <button class="portfolio btn-circle" id="btn-portfolio">Portfolio</button>
-            <button class="contact btn-circle" id="btn-contact">Contact</button>
+            <button class="cv btn-cv btn-circle btn-circle-l" id="btn-cv">Curriculum Vitae</button>
+            <button class="career btn-career btn-circle btn-circle-l" id="btn-career">Ma reconversion</button>
+            <button class="refer btn-refer btn-circle btn-circle-l" id="btn-refer">Recommandation</button>
+            <button class="skills btn-skills btn-circle btn-circle-l" id="btn-skills">Compétences</button>
+            <button class="portfolio btn-portfolio btn-circle btn-circle-l" id="btn-portfolio">Portfolio</button>
+            <button class="contact btn-contact btn-circle btn-circle-l" id="btn-contact">Contact</button>
         </section>
         
         <section class="section" id="cv">
@@ -127,11 +127,11 @@
                     </div>
                 </div>
             </div>
-            <a href="CV - Marie Burki.pdf" download class="btn btn-cv">Télécharger PDF</a>
+            <a href="CV - Marie Burki.pdf" download class="btn-cv btn-circle btn-circle-s" id="download-cv">Télécharger PDF</a>
         </section>
 
         <section class="section" id="career">
-            <h3 class="before career-title">Parcours antérieur</h3>
+            <h3 class="before career-title btn-career btn-circle btn-circle-m">Parcours antérieur</h3>
             <p class="before career-text career-text-hidden">Ancienne étudiante à l'université, je m'intéressais
                 aux pays et aux religions orientales (l'Inde et le Bouddhisme particulièrement). L'intérêt
                 reste, à titre personnel, mais professionnellement cette voie manquait de concret à mon
@@ -142,7 +142,7 @@
                 Mais, en 2019, l'arrivée de mon fils initia une réflexion sur mes envies et projets
                 professionnels à long terme.
             </p>
-            <h3 class="change career-title career-title-active">Pourquoi le développement front-end ?</h3>
+            <h3 class="change career-title career-title-active btn-career btn-circle btn-circle-m">Pourquoi le développement front-end ?</h3>
             <p class="change career-text">Même si j'aime mon précédent métier, j'ai toujours
                 su que je ne voulais pas l'exercer toute ma vie. En réfléchissant plus sérieusement à la
                 direction que je voulais prendre, deux facteurs majeurs m'amenèrent sur ma nouvelle voie.<br>
@@ -156,7 +156,7 @@
                 C'est ainsi que je me suis lancée dans l'apprentissage du développement front-end. Sans regret,
                 car depuis que j'ai commencé à coder, je découvre un métier que j'adore.
             </p>
-            <h3 class="after career-title">Parcours de développeuse</h3>
+            <h3 class="after career-title btn-career btn-circle btn-circle-m">Parcours de développeuse</h3>
             <p class="after career-text career-text-hidden">Fin 2020, je suis maman au foyer et j'entame le parcours diplômant de
                 développeur front-end d'OpenClassrooms pendant mon temps libre.<br>
                 Mais à un tiers du parcours, des contraintes de temps et d'argent me poussent à m'adapter et je
@@ -177,8 +177,7 @@
                 mentorer. Elle est très pragmatique et perfectionniste, elle cherche toujours à améliorer/parfaire
                 la solution existante. En outre elle a une bonne maitrise des technologies du Web. Si vous voulez
                 des applications optimisées et accessible pour tous, je vous conseille fortement Marie. "</quote>
-            <p>Reçue sur Malt:</p>
-            <a href="http://malt.fr/profile/marieb" target="_blank" class="btn btn-orange">Visiter le profil</a>
+            <p>Reçue sur Malt <a href="http://malt.fr/profile/marieb" target="_blank" class="btn-icon btn-icon-refer"><i class="fas fa-external-link-alt"></i></a></p>
         </section>
 
         <section class="section" id="skills">
@@ -406,18 +405,14 @@
         </section>
 
         <section class="section" id="contact">
-            <h3>Contactez-moi</h3>
             <p>Vous pouvez m'écrire à l'adresse mail suivante :<br>
-                <a href="mailto:marie.buerki@gmail.com">marie.buerki@gmail.com</a><br>
+                <a href="mailto:marie.buerki@gmail.com" class="bold">marie.buerki@gmail.com</a><br>
                 ou me contacter via les plateformes ci-dessous :
             </p>
             <div>
-                <a href="http://malt.fr/profile/marieb" target="_blank" class="btn-icon btn-icon-social"><img
-                    src="pictures/malt-white-s.png" alt=""></a></button>
-                <a href="https://github.com/marie-bu" target="_blank" class="btn-icon btn-icon-social"><i
-                        class="fab fa-github"></i></a></button>
-                <a href="www.linkedin.com/in/marie-bu" target="blank" class="btn-icon btn-icon-social"><i
-                        class="fab fa-linkedin"></i></a></button>
+                <a href="http://malt.fr/profile/marieb" target="_blank" class="btn-icon btn-icon-contact"><img src="pictures/malt-white-s.png" alt="" id="white-malt"><img src="pictures/malt-red-s.png" alt="" id="red-malt"></a>
+                <a href="https://github.com/marie-bu" target="_blank" class="btn-icon btn-icon-contact"><i class="fab fa-github"></i></a>
+                <a href="www.linkedin.com/in/marie-bu" target="blank" class="btn-icon btn-icon-contact"><i class="fab fa-linkedin"></i></a>
             </div>
         </section>
     </main>
