--- a/index.html
+++ b/index.html
@@ -177,15 +177,15 @@
                 mentorer. Elle est très pragmatique et perfectionniste, elle cherche toujours à améliorer/parfaire
                 la solution existante. En outre elle a une bonne maitrise des technologies du Web. Si vous voulez
                 des applications optimisées et accessible pour tous, je vous conseille fortement Marie. "</quote>
-            <p>Reçue sur Malt <a href="http://malt.fr/profile/marieb" target="_blank" class="btn-icon btn-icon-refer"><i class="fas fa-external-link-alt"></i></a></p>
+            <p>Reçue sur Malt <a href="http://malt.fr/profile/marieb" target="_blank" class="btn-refer btn-icon btn-icon-xs"><i class="fas fa-external-link-alt"></i></a></p>
         </section>
 
         <section class="section" id="skills">
             <h3>Compétences sur le parcours diplômant d'OpenClassrooms</h3>
-            <p>
+            <p class="bold">
                 <span class="perso"><i class="fas fa-heart"></i>Personnelles</span>
                 <span class="done"><i class="fas fa-star"></i>Acquises</span>
-                <span class="to-do"><i class="far fa-star"></i>À étudier</span>
+                <span class="to-do light"><i class="far fa-star"></i>À étudier</span>
             </p>
             <ul>
                 <li class="perso"><i class="fas fa-heart"></i>Affinité avec l'UI design</li>
@@ -196,13 +196,13 @@
                 <li class="done"><i class="fas fa-star"></i>Javascript</li>
                 <li class="done"><i class="fas fa-star"></i>Accessibilité</li>
                 <li class="done"><i class="fas fa-star"></i>Git & GitHub</li>
-                <li class="to-do"><i class="far fa-star"></i>Méthode Agile</li>
-                <li class="to-do"><i class="far fa-star"></i>Conception d'interface</li>
-                <li class="to-do"><i class="far fa-star"></i>React & React Router</li>
-                <li class="to-do"><i class="far fa-star"></i>API & API REST</li>
-                <li class="to-do"><i class="far fa-star"></i>Redux</li>
-                <li class="to-do"><i class="far fa-star"></i>BDD & TDD</li>
-                <li class="to-do"><i class="far fa-star"></i>Chrome Debugger</li>
+                <li class="to-do light"><i class="far fa-star"></i>Méthode Agile</li>
+                <li class="to-do light"><i class="far fa-star"></i>Conception d'interface</li>
+                <li class="to-do light"><i class="far fa-star"></i>React & React Router</li>
+                <li class="to-do light"><i class="far fa-star"></i>API & API REST</li>
+                <li class="to-do light"><i class="far fa-star"></i>Redux</li>
+                <li class="to-do light"><i class="far fa-star"></i>BDD & TDD</li>
+                <li class="to-do light"><i class="far fa-star"></i>Chrome Debugger</li>
             </ul>
         </section>
 
@@ -218,7 +218,7 @@
                         </div>
                     </div>
                     <div class="project-details">
-                        <ul class="project-details-skills">
+                        <ul class="project-details-skills ">
                             <li><i class="fas fa-tools"></i></li>
                             <li>UI design</li>
                             <li>Responsive design</li>
@@ -230,9 +230,8 @@
                         <p></p>
                     </div>
                     <div class="project-links">
-                        <button class="btn-icon btn-icon-project btn-icon-more"><i
-                                class="fas fa-ellipsis-v"></i></button>
-                        <a href="" target="blank" class="btn-icon btn-icon-project"><i class="fab fa-github"></i></a>
+                        <button class="btn-portfolio btn-icon btn-icon-xs btn-icon-more"><i class="fas fa-ellipsis-v"></i></button>
+                        <a href="" target="blank" class="btn-portfolio btn-icon btn-icon-xs"><i class="fab fa-github"></i></a>
                     </div>
                 </div>
 
@@ -245,7 +244,7 @@
                         </div>
                     </div>
                     <div class="project-details">
-                        <ul class="project-details-skills">
+                        <ul class="project-details-skills ">
                             <li><i class="fas fa-tools"></i></li>
                             <li>UI design</li>
                             <li>Responsive design</li>
@@ -262,12 +261,12 @@
                             (création du logo et du contenu compris).</p>
                     </div>
                     <div class="project-links">
-                        <button class="btn-icon btn-icon-project btn-icon-more"><i
+                        <button class="btn-portfolio btn-icon btn-icon-xs btn-icon-more"><i
                                 class="fas fa-ellipsis-v"></i></button>
                         <a href="https://github.com/marie-bu/EcoArava" target="blank"
-                            class="btn-icon btn-icon-project"><i class="fab fa-github"></i></a>
+                            class="btn-portfolio btn-icon btn-icon-xs"><i class="fab fa-github"></i></a>
                         <a href="https://marie-bu.github.io/EcoArava/" target="blank"
-                            class="btn-icon btn-icon-project"><i class="fas fa-external-link-alt"></i></a>
+                            class="btn-portfolio btn-icon btn-icon-xs"><i class="fas fa-external-link-alt"></i></a>
                     </div>
                 </div>
             </div>
@@ -283,7 +282,7 @@
                         </div>
                     </div>
                     <div class="project-details">
-                        <ul class="project-details-skills">
+                        <ul class="project-details-skills ">
                             <li><i class="fas fa-tools"></i></li>
                             <li>Accessibilité</li>
                             <li>Javascript</li>
@@ -300,13 +299,13 @@
                         </p>
                     </div>
                     <div class="project-links">
-                        <button class="btn-icon btn-icon-project btn-icon-more"><i
+                        <button class="btn-portfolio btn-icon btn-icon-xs btn-icon-more"><i
                                 class="fas fa-ellipsis-v"></i></button>
                         <a href="https://github.com/marie-bu/MarieBurki_6_23022021" target="blank"
-                            class="btn-icon btn-icon-project"><i class="fab fa-github"></i></a>
-                        <a href="" class="btn-icon btn-icon-project"><i class="far fa-images"></i></a>
+                            class="btn-portfolio btn-icon btn-icon-xs"><i class="fab fa-github"></i></a>
+                        <a href="" class="btn-portfolio btn-icon btn-icon-xs"><i class="far fa-images"></i></a>
                         <a href="https://marie-bu.github.io/MarieBurki_6_23022021/" target="blank"
-                            class="btn-icon btn-icon-project"><i class="fas fa-external-link-alt"></i></a>
+                            class="btn-portfolio btn-icon btn-icon-xs"><i class="fas fa-external-link-alt"></i></a>
                     </div>
                 </div>
 
@@ -319,7 +318,7 @@
                         </div>
                     </div>
                     <div class="project-details">
-                        <ul class="project-details-skills">
+                        <ul class="project-details-skills ">
                             <li><i class="fas fa-tools"></i></li>
                             <li>Javascript</li>
                         </ul>
@@ -329,12 +328,12 @@
                             apparition de messages d'erreur et de confirmation.</p>
                     </div>
                     <div class="project-links">
-                        <button class="btn-icon btn-icon-project btn-icon-more"><i
+                        <button class="btn-portfolio btn-icon btn-icon-xs btn-icon-more"><i
                                 class="fas fa-ellipsis-v"></i></button>
                         <a href="https://github.com/marie-bu/MarieBurki_4_10022021" target="blank"
-                            class="btn-icon btn-icon-project"><i class="fab fa-github"></i></a>
+                            class="btn-portfolio btn-icon btn-icon-xs"><i class="fab fa-github"></i></a>
                         <a href="https://marie-bu.github.io/MarieBurki_4_10022021/" target="blank"
-                            class="btn-icon btn-icon-project"><i class="fas fa-external-link-alt"></i></a>
+                            class="btn-portfolio btn-icon btn-icon-xs"><i class="fas fa-external-link-alt"></i></a>
                     </div>
                 </div>
 
@@ -347,7 +346,7 @@
                         </div>
                     </div>
                     <div class="project-details">
-                        <ul class="project-details-skills">
+                        <ul class="project-details-skills ">
                             <li><i class="fas fa-tools"></i></li>
                             <li>CSS3</li>
                             <li>Sass</li>
@@ -362,13 +361,13 @@
                         </p>
                     </div>
                     <div class="project-links">
-                        <button class="btn-icon btn-icon-project btn-icon-more"><i
+                        <button class="btn-portfolio btn-icon btn-icon-xs btn-icon-more"><i
                                 class="fas fa-ellipsis-v"></i></button>
                         <a href="https://github.com/marie-bu/MarieBurki_3_12012021" target="blank"
-                            class="btn-icon btn-icon-project"><i class="fab fa-github"></i></a>
-                        <a href="" class="btn-icon btn-icon-project"><i class="far fa-images"></i></a>
+                            class="btn-portfolio btn-icon btn-icon-xs"><i class="fab fa-github"></i></a>
+                        <a href="" class="btn-portfolio btn-icon btn-icon-xs"><i class="far fa-images"></i></a>
                         <a href="https://marie-bu.github.io/MarieBurki_3_12012021/" target="blank"
-                            class="btn-icon btn-icon-project"><i class="fas fa-external-link-alt"></i></a>
+                            class="btn-portfolio btn-icon btn-icon-xs"><i class="fas fa-external-link-alt"></i></a>
                     </div>
                 </div>
 
@@ -392,13 +391,13 @@
                             tablette n'étant pas définie, c'est à l'étudiant de concevoir le design pour ce format.</p>
                     </div>
                     <div class="project-links">
-                        <button class="btn-icon btn-icon-project btn-icon-more"><i
+                        <button class="btn-portfolio btn-icon btn-icon-xs btn-icon-more"><i
                                 class="fas fa-ellipsis-v"></i></button>
                         <a href="https://github.com/marie-bu/MarieBurki_2_20122020" target="blank"
-                            class="btn-icon btn-icon-project"><i class="fab fa-github"></i></a>
-                        <a href="" class="btn-icon btn-icon-project"><i class="far fa-images"></i></a>
+                            class="btn-portfolio btn-icon btn-icon-xs"><i class="fab fa-github"></i></a>
+                        <a href="" class="btn-portfolio btn-icon btn-icon-xs"><i class="far fa-images"></i></a>
                         <a href="https://marie-bu.github.io/MarieBurki_2_20122020/" target="blank"
-                            class="btn-icon btn-icon-project"><i class="fas fa-external-link-alt"></i></a>
+                            class="btn-portfolio btn-icon btn-icon-xs"><i class="fas fa-external-link-alt"></i></a>
                     </div>
                 </div>
             </div>
